--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -54,6 +54,9 @@ body {
           text-transform: uppercase;
         }
       }
+      .moon {
+        border-bottom: solid 2px $mainMoon;
+      }
 
       .listContent {
         width: 100%;
@@ -62,7 +65,7 @@ body {
         transition: all 0.7s;
         transform: translateY(-120px);
 
-        a {
+        .mpLinks {
           width: 100%;
           height: 80px;
           border-bottom: solid 1px $main;
@@ -81,6 +84,10 @@ body {
             transform: translateX(-15px);
             transition: 0.4s;
           }
+        }
+        .moon {
+          color: $mainMoon;
+          border-bottom: solid 1px $mainMoon;
         }
       }
 
