--- a/css/componentes/moreAboutMe.css
+++ b/css/componentes/moreAboutMe.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 25 |                 border-top: 1px solid $main;
- *    |                                       ^^^^^
+ * 23 |           border-bottom: 1px solid $main;
+ *    |                                    ^^^^^
  *    '
- *   scss\componentes\moreAboutMe.scss 25:39  root stylesheet */
+ *   scss\componentes\moreAboutMe.scss 23:36  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 25 \2502                  border-top: 1px solid $main;\d\a    \2502                                        ^^^^^\a    \2575 \a   scss\\componentes\\moreAboutMe.scss 25:39  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 23 \2502            border-bottom: 1px solid $main;\d\a    \2502                                     ^^^^^\a    \2575 \a   scss\\componentes\\moreAboutMe.scss 23:36  root stylesheet";
 }
