--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ body #main .welcomeMessage .welcome {
   font-weight: 600;
 }
 body #main .welcomeMessage .welcome .welcomeText {
-  transition: all 0.7s ease-in-out;
+  transition: all 0.5s ease-in-out;
   color: transparent; /* Hace el relleno del texto transparente */
   -webkit-text-stroke: 1px #000000; /* Borde de 2px de ancho y color negro */
   letter-spacing: 2px;
@@ -131,7 +131,7 @@ body #main .welcomeMessage .welcome .name {
   color: #469ae9;
 }
 body #main .wOne, body #main .wTwo {
-  transition: all 0.7s;
+  transition: all 0.5s;
   transform: translateY(-50px);
   opacity: 0;
 }
@@ -141,7 +141,7 @@ body #main .presentation {
   font-size: 18px;
 }
 body #main .presentation .pOne, body #main .presentation .pTwo {
-  transition: all 0.7s;
+  transition: all 0.5s;
   transform: translateY(-50px);
   opacity: 0;
 }
@@ -150,7 +150,7 @@ body #main .presentation .moon {
   color: #c9c5c5 !important;
 }
 body #main .presentation .pText {
-  transition: all 0.7s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 body #main .presentation .intro {
   transform: translateY(0px);
@@ -165,7 +165,7 @@ body #main .moreInfo {
   gap: 20px;
   transform: translateY(-50px);
   opacity: 0;
-  transition: all 0.7s;
+  transition: all 0.5s;
   font-size: 14px;
 }
 body #main .moreInfo .pContainer {
@@ -345,9 +345,6 @@ body #moreAboutMe {
 body #moreAboutMe .mamAbout {
   width: 50%;
   height: 100%;
-  transform: translateY(-100px);
-  opacity: 0;
-  transition: all 1s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -355,13 +352,23 @@ body #moreAboutMe .mamAbout {
 body #moreAboutMe .mamAbout .aboutContainer {
   margin: 50px;
 }
-body #moreAboutMe .mamAbout .aboutContainer h3 {
+body #moreAboutMe .mamAbout .aboutContainer .titleAbout {
   font-size: 50px;
   padding-bottom: 5px;
+  border-bottom: 1px solid #000000;
+  transition: all 1s;
+  transform: translateY(-100px);
+  opacity: 0;
 }
-body #moreAboutMe .mamAbout .aboutContainer p {
-  border-top: 1px solid #000000;
+body #moreAboutMe .mamAbout .aboutContainer .textAbout {
   padding-top: 15px;
+  transition: all 1s;
+  transform: translateY(-100px);
+  opacity: 0;
+}
+body #moreAboutMe .mamAbout .aboutContainer .animation {
+  transform: translateY(0px);
+  opacity: 1;
 }
 body #moreAboutMe .mamCarrousel {
   width: 50%;
