--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -7,25 +7,35 @@ body {
     display: none;
     z-index: -1;
     .mamAbout {
-        width: 50%;
-        height: 100%;
-        transform: translateY(-100px);
-        opacity: 0;
-        transition: all 1s;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .aboutContainer{
-            margin: 50px;
-            h3 {
-                font-size: 50px;
-                padding-bottom: 5px;
-            }
-            p {
-                border-top: 1px solid $main;
-                padding-top: 15px;
-            }
+      width: 50%;
+      height: 100%;
+
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .aboutContainer {
+        margin: 50px;
+        // border: solid 1px red;
+        .titleAbout {
+          font-size: 50px;
+          padding-bottom: 5px;
+          border-bottom: 1px solid $main;
+          transition: all 1s;
+          transform: translateY(-100px);
+          opacity: 0;
         }
+        .textAbout {
+          padding-top: 15px;
+          transition: all 1s;
+          transform: translateY(-100px);
+          opacity: 0;
+        }
+        .animation {
+          transform: translateY(0px);
+          opacity: 1;
+        }
+      }
     }
     .mamCarrousel {
       width: 50%;
@@ -33,12 +43,12 @@ body {
       transform: translateY(-100px);
       opacity: 0;
       transition: all 1s;
-      img{
+      img {
         width: 100%;
-            transform: translateY(-100px);
-          object-fit: cover;  
-          opacity: 70%  ;
-      } 
+        transform: translateY(-100px);
+        object-fit: cover;
+        opacity: 70%;
+      }
     }
     .animation {
       transform: translateY(0px);
