--- a/scss/componentes/nav.scss
+++ b/scss/componentes/nav.scss
@@ -10,6 +10,7 @@ body {
         transform: translateY(-20px);
         transition: 0.7s;
         background-color: transparent;
+        cursor: pointer;
       }
       .moon {
         color: $mainMoon;
