--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body nav .logoContainer .logo {
   transform: translateY(-20px);
   transition: 0.7s;
   background-color: transparent;
+  cursor: pointer;
 }
 body nav .logoContainer .moon {
   color: #c9c5c5;
@@ -216,7 +217,7 @@ body.moon .pContainer::after {
 }
 
 body {
-  /* Corrección para asegurar que el color cambia */
+  /* Corrección para asegurar que el color cambia en modo oscuro */
 }
 body #myProjects {
   height: 100%;
@@ -226,26 +227,29 @@ body #myProjects {
 }
 body #myProjects .previewContainer {
   width: 50%;
+  border: solid 1px red;
   border-radius: 0px 50px 0px 0px;
   transition: opacity 0.7s ease-in-out, background-image 0.5s ease-in-out;
-  opacity: 0; /* Se inicia oculta */
   pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
+  background-color: red;
+  opacity: 0; /* Se inicia oculta */
+  /* Cambios para mostrar la imagen de fondo al hacer hover */
 }
-body #myProjects .previewContainer.ganadera {
+.mpLinksGanadera:hover ~ body #myProjects .previewContainer {
   background-image: url(../assets/ganaderaArenales.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
 }
-body #myProjects .previewContainer.das {
+.mpLinksDas:hover ~ body #myProjects .previewContainer {
   background-image: url(../assets/dasService.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
 }
-body #myProjects .previewContainer.dres {
+.mpLinksDres:hover ~ body #myProjects .previewContainer {
   background-image: url(../assets/dresOrlandi.jpg);
   background-size: cover;
   background-position: center;
@@ -298,20 +302,12 @@ body #myProjects .listContainer .listContent .mpLinks .content {
   transform: translateX(-15px);
   transition: 0.4s;
 }
-body #myProjects .listContainer .listContent .mpLinksGanadera {
-  transition: all 0.6s;
-  opacity: 0;
-  transform: translateY(-120px);
-}
-body #myProjects .listContainer .listContent .mpLinksDas {
-  transition: all 0.6s;
-  transform: translateY(-120px);
-  opacity: 0;
-}
+body #myProjects .listContainer .listContent .mpLinksGanadera,
+body #myProjects .listContainer .listContent .mpLinksDas,
 body #myProjects .listContainer .listContent .mpLinksDres {
   transition: all 0.6s;
-  transform: translateY(-120px);
   opacity: 0;
+  transform: translateY(-120px);
 }
 body #myProjects .listContainer .listContent .moon {
   color: #c9c5c5;
@@ -359,6 +355,8 @@ body #moreAboutMe .mamAbout .aboutContainer .titleAbout {
   transition: all 1s;
   transform: translateY(-100px);
   opacity: 0;
+  color: red;
+  background-color: transparent;
 }
 body #moreAboutMe .mamAbout .aboutContainer .textAbout {
   padding-top: 15px;
@@ -369,6 +367,13 @@ body #moreAboutMe .mamAbout .aboutContainer .textAbout {
 body #moreAboutMe .mamAbout .aboutContainer .animation {
   transform: translateY(0px);
   opacity: 1;
+}
+body #moreAboutMe .mamAbout .aboutContainer .moon {
+  color: #c9c5c5;
+  border-bottom: 1px solid #c9c5c5;
+}
+body #moreAboutMe .mamAbout .aboutContainer .moonText {
+  color: #c9c5c5;
 }
 body #moreAboutMe .mamCarrousel {
   width: 50%;
