--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -22,7 +22,7 @@ body {
           transition: all 1s;
           transform: translateY(-100px);
           opacity: 0;
-          color: red;
+          color: $main;
           background-color: transparent;
         }
         .textAbout {
@@ -30,6 +30,7 @@ body {
           transition: all 1s;
           transform: translateY(-100px);
           opacity: 0;
+          color: $main;
         }
         .animation {
           transform: translateY(0px);
