--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,3 +3,4 @@
 @import "./componentes/main.scss";
 @import "./componentes/myProjects.scss";
 @import "./componentes/moreAboutMe.scss";
+@import "./componentes/menu.scss";
