--- a/css/styles.css
+++ b/css/styles.css
@@ -416,23 +416,37 @@ body #menu .menuContainer ul {
 body #menu .menuContainer ul li {
   font-size: 40px;
   margin: 5px;
-  border: solid 1px #ff0000;
   display: flex;
   align-items: center;
   gap: 10px;
   overflow: hidden;
+  transition: all 0.5s;
 }
 body #menu .menuContainer ul li p {
   transform: translateY(-30px);
+  opacity: 0;
+  transition: all 0.5s;
+}
+body #menu .menuContainer ul li .animation {
+  transform: translateY(0px);
+  opacity: 1;
 }
 body #menu .menuContainer .networks {
   margin-top: 10px;
   display: flex;
   justify-content: space-around;
+  overflow: hidden;
+  transition: all 0.5s;
 }
 body #menu .menuContainer .networks a {
+  transition: all 0.5s;
+  transform: translateY(-20px);
   display: flex;
   gap: 5px;
+}
+body #menu .menuContainer .networks .animation {
+  transform: translateY(0px);
+  opacity: 1;
 }
 body .displayBlock {
   display: flex !important;
