--- a/scss/componentes/menu.scss
+++ b/scss/componentes/menu.scss
@@ -24,6 +24,7 @@ body {
             transform: translateY(-30px);
             opacity: 0;
             transition: all 0.5s;
+            color: $main;
           }
           .animation {
             transform: translateY(0px);
