--- a/scss/componentes/nav.scss
+++ b/scss/componentes/nav.scss
@@ -36,7 +36,7 @@ body {
             .theme {
               transform: translateY(-20px);
               transition: 0.8s ease-in-out;
-              // background-color: transparent;
+              background-color: transparent;
             }
 
             .language {
