--- a/scss/componentes/menu.scss
+++ b/scss/componentes/menu.scss
@@ -25,10 +25,16 @@ body {
             opacity: 0;
             transition: all 0.5s;
             color: $main;
+            cursor: pointer;
           }
+
           .animation {
             transform: translateY(0px);
             opacity: 1;
+          }
+
+          .moon {
+            color: $mainMoon;
           }
         }
       }
@@ -47,6 +53,7 @@ body {
           display: flex;
           gap: 5px;
           color: $main;
+          cursor: pointer;
           &::after {
             content: "";
             position: absolute;
@@ -57,12 +64,12 @@ body {
             background-color: $main; /* Color del subrayado */
             transition: width 0.6s ease, background-color 0.3s ease;
           }
-  
+
           &:hover::after {
             width: 100%; /* Ancho completo al hacer hover */
           }
         }
-        
+
         .animation {
           transform: translateY(0px);
           opacity: 1;
