--- a/scss/componentes/menu.scss
+++ b/scss/componentes/menu.scss
@@ -53,21 +53,26 @@ body {
           display: flex;
           gap: 5px;
           color: $main;
+
           cursor: pointer;
           &::after {
             content: "";
             position: absolute;
             left: 0;
-            bottom: 7px; /* Posición del subrayado */
+            bottom: 7px;
             width: 0; /* Inicialmente sin anchura */
-            height: 1px; /* Grosor del subrayado */
+            height: 1.5px; /* Grosor del subrayado */
             background-color: $main; /* Color del subrayado */
             transition: width 0.6s ease, background-color 0.3s ease;
+            border-radius: 5px;
           }
 
           &:hover::after {
             width: 100%; /* Ancho completo al hacer hover */
           }
+        }
+        .moon {
+          color: $mainMoon;
         }
 
         .animation {
