--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -1,8 +1,8 @@
 body {
   #main {
+    z-index: 1;
     .welcomeMessage {
       margin-top: 0px;
-
       .welcome {
         display: flex;
         justify-content: center;
