--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     position: absolute;
     display: none;
-    z-index: -1;
+    z-index: 0;
     .mamAbout {
       width: 50%;
       height: 100%;
@@ -51,11 +51,44 @@ body {
       transform: translateY(-100px);
       opacity: 0;
       transition: all 1s;
-      img {
+      border: solid 5px red;
+      position: relative;
+      .fa-solid {
+        position: absolute;
+        color: white;
+        opacity: 0.5;
+        z-index: 5;
+        font-size: 20px;
+        transition: all 0.5s;
+        cursor: pointer;
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      .fa-circle-chevron-left {
+        top: 50%;
+        left: 10px;
+      }
+      .fa-circle-chevron-right {
+        top: 50%;
+        right: 10px;
+      }
+      .carrouselContent{
+        border: solid 5px green;
+        height: 100%;
         width: 100%;
-        transform: translateY(-100px);
-        object-fit: cover;
-        opacity: 70%;
+        display: flex;
+        overflow: auto;
+        flex-wrap: nowrap;
+        img {
+          width: 100%;
+          border: solid 2.5px red;
+          // transform: translateY(-100px);
+          object-fit: cover;
+          opacity: 80%;
+          height: auto;
+        }
       }
     }
     .animation {
