--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -51,7 +51,7 @@ body {
       transform: translateY(-100px);
       opacity: 0;
       transition: all 1s;
-      border: solid 5px red;
+      // border: solid 5px red;
       position: relative;
       .fa-solid {
         position: absolute;
@@ -74,21 +74,29 @@ body {
         top: 50%;
         right: 10px;
       }
-      .carrouselContent{
-        border: solid 5px green;
+      .carrouselContent {
         height: 100%;
         width: 100%;
         display: flex;
-        overflow: auto;
+        overflow-x: auto;
+        scroll-snap-type: x mandatory;
         flex-wrap: nowrap;
-        img {
+        border-radius: 8px 0 0 8px;
+        .mamImgContainer {
+          flex: 0 0 auto;
           width: 100%;
-          border: solid 2.5px red;
-          // transform: translateY(-100px);
-          object-fit: cover;
-          opacity: 80%;
-          height: auto;
+          max-width: 600px;
+          scroll-snap-align: center;
+          img {
+            width: 100%;
+            height: 100%;
+            opacity: 0.8;
+            object-fit: cover;
+          }
         }
+      }
+      ::-webkit-scrollbar{
+        display: none;
       }
     }
     .animation {
