--- a/css/styles.css
+++ b/css/styles.css
@@ -234,13 +234,9 @@ body #myProjects {
 }
 body #myProjects .previewContainer {
   width: 50%;
-  border: solid 1px red;
   border-radius: 0px 50px 0px 0px;
-  transition: opacity 0.7s ease-in-out, background-image 0.5s ease-in-out;
-  pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
-  background-color: red;
-  opacity: 0; /* Se inicia oculta */
-  /* Cambios para mostrar la imagen de fondo al hacer hover */
+  transition: opacity 0.5s ease-in-out, background-image 0.3s ease-in-out;
+  pointer-events: none;
 }
 .mpLinksGanadera:hover ~ body #myProjects .previewContainer {
   background-image: url(../assets/ganaderaArenales.jpg);
