--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -7,14 +7,9 @@ body {
     z-index: 1;
     .previewContainer {
       width: 50%;
-      border: solid 1px red;
       border-radius: 0px 50px 0px 0px;
-      transition: opacity 0.7s ease-in-out, background-image 0.5s ease-in-out;
-      pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
-      background-color: red;
-      opacity: 0; /* Se inicia oculta */
-
-      /* Cambios para mostrar la imagen de fondo al hacer hover */
+      transition: opacity 0.5s ease-in-out, background-image 0.3s ease-in-out;
+      pointer-events: none;
       .mpLinksGanadera:hover ~ & {
         background-image: url(../assets/ganaderaArenales.jpg);
         background-size: cover;
