--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -6,42 +6,58 @@ body {
     position: absolute;
     display: none;
     z-index: 0;
-    .mamAbout {
+    .mamAboutContainer {
       width: 50%;
-      height: 100%;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      .aboutContainer {
-        margin: 50px;
-        // border: solid 1px red;
-        .titleAbout {
-          font-size: 50px;
-          padding-bottom: 5px;
-          border-bottom: 1px solid $main;
-          transition: all 1s;
-          transform: translateY(-100px);
-          opacity: 0;
-          color: $main;
-          background-color: transparent;
-        }
-        .textAbout {
-          padding-top: 15px;
-          transition: all 1s;
-          transform: translateY(-100px);
-          opacity: 0;
-          color: $main;
-        }
-        .animation {
-          transform: translateY(0px);
-          opacity: 1;
-        }
-        .moon {
-          color: $mainMoon;
-          border-bottom: 1px solid $mainMoon;
-        }
-        .moonText {
-          color: $mainMoon;
+      // border: solid 5px blue;
+      .mamAbout {
+        width: 80%;
+        height: 40%;
+        // display: flex;
+        flex: 1;
+        max-height: 20%;
+        // justify-content: center;
+        // align-items: center;
+        border: solid 5px red;
+        // overflow: hidden;
+        .aboutContainer {
+          flex: 1;
+
+          // margin: 50px;
+          // border: solid 1px red;
+          .titleAbout {
+            font-size: 40px;
+            padding-bottom: 2px;
+            border-bottom: 1px solid $main;
+            transition: all 1s;
+            transform: translateY(-100px);
+            opacity: 0;
+            color: $main;
+            background-color: transparent;
+            height: auto;
+          }
+          .textAbout {
+            // ;border: solid 1px blue;
+            padding-top: 5px;
+            transition: all 1s;
+            transform: translateY(-100px);
+            opacity: 0;
+            color: $main;
+          }
+          .animation {
+            transform: translateY(0px);
+            opacity: 1;
+          }
+          .moon {
+            color: $mainMoon;
+            border-bottom: 1px solid $mainMoon;
+          }
+          .moonText {
+            color: $mainMoon;
+          }
         }
       }
     }
@@ -95,7 +111,7 @@ body {
           }
         }
       }
-      ::-webkit-scrollbar{
+      ::-webkit-scrollbar {
         display: none;
       }
     }
