--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -15,9 +15,9 @@ body {
       // border: solid 5px blue;
       .mamAbout {
         width: 80%;
-        height: 40%;
+        // height: 100%;
         // display: flex;
-        flex: 1;
+        // flex: 1;
         max-height: 20%;
         // justify-content: center;
         // align-items: center;
@@ -25,11 +25,12 @@ body {
         // overflow: hidden;
         .aboutContainer {
           flex: 1;
-
-          // margin: 50px;
-          // border: solid 1px red;
+          height: 100%;
+          margin-bottom: 10px;
+          border: solid  1px red;
+          box-sizing: border-box;
           .titleAbout {
-            font-size: 40px;
+            font-size: 30px;
             padding-bottom: 2px;
             border-bottom: 1px solid $main;
             transition: all 1s;
