animation text mam first step completed

--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -21,13 +21,13 @@ body {
         max-height: 20%;
         // justify-content: center;
         // align-items: center;
-        border: solid 5px red;
+        // border: solid 5px red;
         // overflow: hidden;
         .aboutContainer {
           flex: 1;
           height: 100%;
           margin-bottom: 10px;
-          border: solid  1px red;
+          // border: solid  1px red;
           box-sizing: border-box;
           .titleAbout {
             font-size: 30px;
